Starting to work on the first branch and bound implementation.

--- a/Salesman/bin/.gitignore
+++ b/Salesman/bin/.gitignore
@@ -1,1 +1,8 @@
-/CGraph.class
+/CBBNode.class
+/CBBbestPath.class
+/CBBbestTrack.class
+/CBBNodeComparator.class
+/CBBBestTrack.class
+/CTrackComparator.class
+/CVertexComparator.class
+/CBBNode2.class
